fix: fix several little bugs
