# my-music-go/docs/swagger.json
@@ -323,7 +323,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Artist"
+                            "$ref": "#/definitions/models.ArtistInfoResponse"
                         }
                     },
                     "400": {
@@ -2330,6 +2330,12 @@
                         "description": "每页数量",
                         "name": "pageSize",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "搜索关键词 (匹配歌单名)",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2422,9 +2428,12 @@
                 }
             }
         },
-        "models.Artist": {
+        "models.ArtistInfoResponse": {
             "type": "object",
             "properties": {
+                "album_count": {
+                    "type": "integer"
+                },
                 "avatar": {
                     "type": "string"
                 },
