# my-music-go/internal/models/artist.go
@@ -11,3 +11,12 @@ type Artist struct {
 	Description *string   `db:"description" json:"description,omitempty"`
 	CreatedAt   time.Time `db:"created_at" json:"created_at"`
 }
+
+type AlbumCount struct {
+	AlbumCount int `db:"album_count" json:"album_count"`
+}
+
+type ArtistInfoResponse struct {
+	Artist
+	AlbumCount
+}
